--- a/render.yaml
+++ b/render.yaml
@@ -8,8 +8,8 @@ services:
   - type: web
     name: prueba_tecnica
     env: ruby
-    buildCommand: './render-build.sh'
-    startCommand: 'bundle exec rails s'
+    buildCommand: './bin/render-build.sh'
+    startCommand: 'bundle exec puma -C config/puma.rb"'
     envVars:
       - key: DATABASE_URL
         fromDatabase:
